--- a/styles/advantages-style.css
+++ b/styles/advantages-style.css
@@ -9,12 +9,12 @@
 .advantages-items{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
     column-gap: 5px;
 }
 
 .advantages-item{
-    max-width: 480px;
+    width: 32%;
     border: 2px solid #D9D9D9;
     padding: 40px;
     border-bottom: 16px solid #D9D9D9;
@@ -37,6 +37,14 @@
     margin-bottom: 0;
 }
 
+@media (max-width: 1200px) {
+    .advantages-items{
+        justify-content: space-around;
+    }
+    .advantages-item{
+        width: 480px;
+    }
+}
 
 @media (max-width: 800px) {
     .advantages p br{
@@ -45,7 +53,11 @@
 }
     
 @media (max-width: 500px) {
+    .advantages-items{
+        flex-direction: column;
+    }
     .advantages-item{
+        width: 100%;
         padding: 16px;
         border-bottom-width: 8px;
         margin-bottom: 16px;
