--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ h1,h2, h3, h4, h5, h6{font-style: inherit;}
 :root{
 	--main-color: #333;
 	--second-color: #DDB71E;
-	--hover-color: #0A96D3;
+	--hover-color: #DDB71E;
 }
 
 body{
@@ -85,31 +85,31 @@ button:hover{
 }
 
 h1{
-	font-size: calc(24px + (48 - 24) * ((100vw - 360px) / (1530 - 360)));
+	font-size: 48px;
 	font-weight: 400;
 	color: var(--main-color);
 }
 
 h2{
-	font-size: calc(20px + (32 - 20) * ((100vw - 360px) / (1530 - 360)));
+	font-size: 32px;
 	font-weight: 400;
 	line-height: 140%; /* 40px */
-	margin-bottom: calc(24px + (48 - 24) * ((100vw - 360px) / (1530 - 360)));
+	margin-bottom: 48px;
 }
 h3{
-	font-size: calc(16px + (26 - 16) * ((100vw - 360px) / (1530 - 360)));
+	font-size: 26px;
 	line-height: 140%; /* 32px */
 	font-weight: 700;
 }
 h6{
 	color: rgba(51, 51, 51, 0.50);
-	font-size: calc(12px + (20 - 12) * ((100vw - 360px) / (1530 - 360)));
+	font-size: 20px;
 	font-weight: 400;
 	line-height: 140%; /* 28px */
-	margin-bottom: calc(6px + (12 - 6) * ((100vw - 360px) / (1530 - 360)));
+	margin-bottom: 12px;
 }
 section{
-	padding: calc(50px + (130 - 50) * ((100vw - 360px) / (1530 - 360))) 0px;
+	padding: 130px 0;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 100% 100%;
@@ -117,20 +117,37 @@ section{
 
 ol{
 	margin-left: 15px;
-	margin-top: calc(16px + (32 - 16) * ((100vw - 360px) / (1530 - 360)));
-	font-size: calc(14px + (18 - 14) * ((100vw - 360px) / (1530 - 360)));
+	margin-top: 32px;
+	font-size: 18px;
     line-height: 140%;
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
 
+
 @media (max-width: 600px) {
 	.container{
 		padding: 0 15px;
 	}
+	h2{
+		font-size: 20px;
+		margin-bottom: 24px;
+	}
+	h3{
+		font-size: 16px;
+	}
+	h6{
+		font-size: 12px;
+		margin-bottom: 6px;
+	}
 
+	section{
+		padding: 50px 0;
+	}
 	ol{
+		margin-top: 16px;
+		font-size: 14px;
 		gap: 8px;
 	}
 	
