--- a/styles/about-style.css
+++ b/styles/about-style.css
@@ -3,10 +3,12 @@
     background-size: cover;
     background-position: 100% 100%;
 }
-
+.about h2{
+    max-width: 744px;
+}
 .about p{
+    max-width: 734px;
     font-size: 20px;
-    font-size: calc(14px + (20 - 14) * ((100vw - 360px) / (1530 - 360)));
     line-height: 140%; 
 }
 .about-items{
@@ -15,12 +17,11 @@
     justify-content: space-between;
     gap: 52px;
     padding-left: 25px;
-    margin-bottom: calc(24px + (48 - 24) * ((100vw - 360px) / (1530 - 360)));
+    margin-bottom: 48px;
 }
 
 .about-item{
     width: 30%;
-    /* width: calc(308px + (460 - 308) * ((100vw - 360px) / (1530 - 360))); */
     padding: 32px 32px 32px 56px;
     border: 2px solid #D9D9D9;
     position: relative;
@@ -59,8 +60,12 @@
 }
 
 @media (max-width: 800px) {
+    .about p{
+        font-size: 14px;
+    }
     .about-items{
         gap: 16px;
+        margin-bottom: 24px;
     }
     .about-item{
         width: 100%;
