--- a/styles/form-style.css
+++ b/styles/form-style.css
@@ -5,8 +5,8 @@
     gap: 24px;
 }
 
-.form-ttl{
-    /* width: 47%; */
+.form-ttl h2{
+    max-width: 670px;
 }
 
 .form{
@@ -19,7 +19,6 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
     gap: 24px;
 }
 .form label{
@@ -54,6 +53,10 @@
     font-size: 18px;
 }
 
+.form span{
+    display: inline-block;
+    max-width: 470px;
+}
 .form span>a{
     text-decoration: underline;
 }
@@ -65,9 +68,6 @@
 }
 
 @media (max-width: 460px){
-    .form-ttl h2 br{
-        display: none;
-    }
 
     .form-ttl h2 b{
         font-weight: normal;
