--- a/styles/header-style.css
+++ b/styles/header-style.css
@@ -1,3 +1,14 @@
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    background-color: #FFF;
+}
+.header.open{
+    height: 100vh;
+}
 .header-top{
     background-color: var(--main-color);
     padding: 16px 0px;
@@ -19,6 +30,12 @@
     align-items: center;
     gap: 10px;
     color: #FFF;
+    border-bottom: 1px solid transparent;
+}
+
+.contact-list a:hover{
+    border-bottom: 1px solid #FFF;
+    transition: border-bottom .3s ease-in-out;
 }
 
 .social-list li{
@@ -42,9 +59,9 @@
     align-items: center;
 }
 
-.header-bottom .logo img{
-    width: calc(118px + (175 - 118) * ((100vw - 360px) / (1530 - 360)));
-    height: calc(48px + (71 - 48) * ((100vw - 360px) / (1530 - 360)));
+.logo img{
+    width: 175px;
+    height: 71px;
 }
 .header-bottom nav{
     display: flex;
@@ -53,7 +70,7 @@
 
 .header-bottom nav a{
     border-bottom: 1px solid transparent;
-    font-size: calc(16px + (18 - 16) * (100vw / 1530));
+    font-size: 18px;
 }
 .header-bottom nav a:hover{
     border-bottom: 1px solid var(--main-color);
@@ -107,6 +124,9 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+    .header-bottom nav a{
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 1100px) {
@@ -121,7 +141,6 @@
     }
     .header-top{
         width: 100%;
-        height: 30%;
         background-color: #FFF;
         color: var(--main-color);
         position: absolute;
@@ -135,7 +154,7 @@
         gap: 24px;
     }
 
-.contact-list{
+    .contact-list{
         flex-direction: column;
         gap: 11px;
     }
@@ -171,14 +190,13 @@
         flex-direction: column;
         gap: 16px;
         position: absolute;
-        top: 83px;
+        top: 81px;
         left: -100%;
         transition: left .3s ease-in-out;
-        z-index: 10;
+        z-index: 15;
         padding: 40px 16px;
         font-size: 16px;
         width: 100%;
-        height: 100%;
         background-color: #FFF;
         justify-content: flex-start;
     }
