--- a/styles/about-style.css
+++ b/styles/about-style.css
@@ -2,10 +2,12 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100% 100%;
+    margin-top: -20px;
 }
 .about h2{
     max-width: 744px;
 }
+
 .about p{
     max-width: 734px;
     font-size: 20px;
