--- a/styles/header-style.css
+++ b/styles/header-style.css
@@ -136,6 +136,13 @@
 }
 
 @media (max-width: 800px) {
+    .header{
+        height: 85px;
+    }
+    .logo img{
+        width: 118px;
+        height: 48px;
+    }   
     .header__burger-btn{
         display: block;
     }
@@ -194,7 +201,7 @@
         left: -100%;
         transition: left .3s ease-in-out;
         z-index: 15;
-        padding: 40px 16px;
+        padding: 40px 50px 40px 16px;
         font-size: 16px;
         width: 100%;
         background-color: #FFF;
@@ -213,10 +220,7 @@
 }
 
 @media (max-width: 400px) {
-    .logo img{
-        width: 118px;
-        height: 48px;
-    }    
+ 
 
     .contact-list svg{
         flex-shrink: 0;
