--- a/styles/promo-style.css
+++ b/styles/promo-style.css
@@ -2,90 +2,66 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 840px;
-    position: relative;
-    overflow: hidden;
-    z-index: 10;
-    
+    padding-top: 587px;
+    padding-bottom: 128px;
 }
 .ttl-bg{
-    position: absolute;
-    width: 80%;
-    height: 125px;
     background-repeat: no-repeat;
-    background-size: cover;
-    bottom: 128px;
-    left: 0px;
-    box-shadow: 8px 12px 8px 0px rgba(0, 0, 0, 0.20), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.promo .container{
-    position: relative;
-    height: 100%;
+    background-size: 85% 100%;
 }
 
 .promo h1{
-    position: absolute;
-    bottom: 164px;
+    display: block;
+    padding: 20px 36px 36px 0px;
 }
 
-
-@media (max-width: 1450px) {
-    .ttl-bg{
-        width: 90%;
-    }
-    
-}
-
-@media (max-width: 1300px) {
-    .ttl-bg{
-        width: 100%;
-    }
-
+@media (max-width: 1300px) {    
     .promo h1{
         font-size: 40px;
     }
 }
 
-@media (max-width: 955px) {
+@media (max-width: 1160px) {  
     .promo h1{
-        bottom: 145px;
+        font-size: 30px;
     }
     
 }
-@media (max-width: 700px) {
-   .promo{
-    height: 335px;
-    background-size: contain;
-    background-position-y: 0px;
-   }
-  
+
+@media (max-width: 880px) {
     .ttl-bg{
-        bottom: 0;
+        background-size: 103% 100%;
+    }
+}
+@media (max-width: 760px) {
+    .ttl-bg{
+        width: 100%;
     }
 
     .promo h1{
         font-size: 24px;
-        bottom: 12%;
     }
-   
 }
 
 @media (max-width: 505px) {
     .promo{
-        height: 300px;
-    }
-}
-
-@media (max-width: 425px) {
-    .promo{
-        height: 235px;
-    }
-    
-    .ttl-bg{
-        bottom: -37px;
+        padding: 0;
+        padding-top: 160px;
+        background-size: contain;
+        background-position-y: 0;
+        /* margin-top: 85px; */
     }
 
     .promo h1{
-        bottom: 9%;
+        padding: 16px 16px 36px 0px;
     }
+    
+}
+
+
+@media (max-width: 385px) {
+    .promo{
+        padding-top: 140px;
+    }
+    
 }
